# dataminer

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  openapi.json  openapi.yaml  pyproject.toml  sqlc.yaml
.claude/: settings.local.json
.github/workflows/: build.yml  pr-checks.yml
PRD/: PRD-ID_SC.md  PRD.md
PRD/Task/: General.md  ID_SC.md
migrations/alembic/: env.py
migrations/alembic/versions/: 0cc362e18bd4_fix_foreign_key_nullability_in_.py  66703a7a9dba_add_column_comments.py  f792da96c208_create_public_schema_configuration_.py
scripts/: fix_sqlc_imports.py  generate_schema.py
sql/queries/: fields.sql  profiles.sql  sources.sql
sql/schema/: README.md  current_schema.sql
src/dataminer/: __init__.py  __main__.py
src/dataminer/api/: app.py  errors.py  health.py  middleware.py
src/dataminer/api/schemas/: __init__.py  source.py
src/dataminer/api/v1/: __init__.py  fields.py  sources.py
src/dataminer/core/: config.py
src/dataminer/db/: base.py  session.py
src/dataminer/db/models/: __init__.py  configuration.py
src/dataminer/db/repositories/: __init__.py  field.py  source.py
tests/: conftest.py
tests/integration/: __init__.py  conftest.py  test_api.py  test_fields_api.py
tests/unit/: conftest.py  test_config.py
