[project]
name = "dataminer"
version = "0.1.0"
description = "Document extraction service for legal documents from various court sources"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Lexicon Team" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.14",
    "Framework :: FastAPI",
]

dependencies = [
    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    # Database
    "asyncpg>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14.0",
    "psycopg2-binary>=2.9.10",
    # Queue & Cache
    "nats-py>=2.9.0",
    "redis>=5.2.0",
    # PDF Processing
    "pdfplumber>=0.11.4",
    "pymupdf>=1.25.1",
    "pytesseract>=0.3.13",
    "pillow>=11.0.0",
    # HTTP Client
    "httpx>=0.27.2",
    # Utilities
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.19",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "pytest-xdist>=3.6.1",
    "httpx>=0.27.2",  # For TestClient
    "sqlparse>=0.5.0",  # For robust SQL statement parsing in tests

    # Code Quality
    "ruff>=0.8.4",
    "mypy>=1.13.0",

    # Type Stubs
    "types-redis>=4.6.0",
    "types-psycopg2>=2.9.0",

    # Code Generation
    "datamodel-code-generator[http]>=0.35.0",  # For OpenAPI to Pydantic model generation

    # Development Tools
    "ipython>=8.30.0",
    "pre-commit>=4.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["src/dataminer"]

[tool.hatch.build.targets.wheel]
only-include = ["src/dataminer"]
sources = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
    "--cov=src/dataminer",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src/dataminer"]
branch = true
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.ruff]
target-version = "py314"
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "ARG001", # unused function argument
    "ARG002", # unused method argument
    "TC002",  # move third-party imports into TYPE_CHECKING block
    "TC003",  # move standard library imports into TYPE_CHECKING block
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ARG",    # allow unused arguments in tests
    "S101",   # allow assert in tests
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.14"
strict = false
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_any_generics = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
strict_equality = false
strict_concatenate = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "pdfplumber.*",
    "fitz.*",
    "pytesseract.*",
    "nats.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "dataminer.api.middleware",
    "dataminer.api.errors",
    "dataminer.core.config",
]
disable_error_code = ["assignment", "override", "misc", "attr-defined", "arg-type"]

[[tool.mypy.overrides]]
module = ["dataminer.api.generated.models"]
ignore_errors = true
